[tool.poetry]
name = "ures"
version = "1.10.0"
description = "The project is designed to provide standard utilization functions for improving the reusability of frequently used functions."
authors = ["stone <github@stone-bo.com>"]
license = "MIT"
readme = "docs/index.md"
repository = "https://github.com/stone-home/Python-URes"
keywords = [
    "utilization",
    "Research Tool",
    "Python"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
packages = [
    { include = "ures"},
]
exclude = [
    "tests",
    "docs",
    "examples",
    "dist",
    "build",
    "ures.egg-info",
    ".git",
    ".gitignore",
    ".github",
    ".pre-commit-config.yaml",
    "commitlint.config.js",
    "run_ut.sh",
    ".env"
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
python-frontmatter = "^1.1.0"
docker = "^7.1.0"
pydantic = "^2.10.6"
tqdm = "^4.67.1"
seaborn = "^0.13.2"
polars = "^1.32.0"
scipy = "^1.16.1"
datashader = "^0.18.2"
holoviews = "^1.21.0"
panel = "^1.7.5"
pyarrow = "^21.0.0"
statsmodels = "^0.14.5"
scikit-learn = "^1.7.1"
kaleido = "^1.0.0"
plotly = "^6.2.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.1.0"
mkdocs = "^1.6.1"
mkdocstrings-python = "^1.16.1"
mkdocs-material = "^9.6.5"
pre-commit = "^4.2.0"
pytest-time = "^0.4.1"
pytest-xdist = "^3.8.0"
coverage = "^7.10.2"
rich = "^14.1.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# pyproject.toml
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cache-clear"
testpaths = [
    "tests",
]
